--- a/mvcprojectnew/.htaccess
+++ b/mvcprojectnew/.htaccess
@@ -1,8 +1,5 @@
 <IfModule mod_rewrite.c>
   RewriteEngine on
-  <!-- Redirect specific directories to themselves (bypass)-->
-  RewriteRule ^(phpMyAdmyadmin|app)(/.*) ?$ [NC,L]
-
-  <!--Redirect everything else to the public folder-->
-  RewriteRule (?!public/) public/$1 [NC,L]
+  RewriteRule ^$ public/ [L]
+  RewriteRule (.*) public/$1 [L]
 </IfModule>
